# audiocloud

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  config.yaml  domain.sqlite-journal  fleet.toml  history.txt  prettier.sh  rustfmt.toml  sqlx-data.json
.cargo/: config.toml
clients/audiocloud-rust-clients/: Cargo.toml
clients/audiocloud-rust-clients/src/: audio_engine.rs  domain_server.rs  instance_driver.rs  lib.rs
domain/audiocloud-domain-server/: Cargo.toml  build.rs
domain/audiocloud-domain-server/prisma/: schema.prisma
domain/audiocloud-domain-server/src/: lib.rs  models.rs  nats.rs  remote_value.rs  tracker.rs
domain/audiocloud-domain-server/src/config/: cloud.rs  file.rs  messages.rs  mod.rs
domain/audiocloud-domain-server/src/db/: media.rs  migrations.rs  mod.rs  models.rs  prisma.rs  sys_props.rs  tasks.rs  tests.rs  utils.rs
domain/audiocloud-domain-server/src/events/: kafka.rs  log_events.rs  messages.rs  mod.rs  noop_events.rs
domain/audiocloud-domain-server/src/fixed_instances/: drivers.rs  instance.rs  media.rs  messages.rs  mod.rs  power.rs  supervisor.rs  values.rs
domain/audiocloud-domain-server/src/media/: README.md  download.rs  messages.rs  mod.rs  supervisor.rs  tests.rs  upload.rs
domain/audiocloud-domain-server/src/o11y/: mod.rs  otlp.rs  sentry.rs
domain/audiocloud-domain-server/src/rest_api/: mod.rs  v1.rs
domain/audiocloud-domain-server/src/sockets/: messages.rs  mod.rs  supervisor.rs  web_rtc.rs  web_sockets.rs
domain/audiocloud-domain-server/src/tasks/: messages.rs  mod.rs  supervisor.rs  task.rs  task_engine.rs  task_fixed_instance.rs  task_media_objects.rs
domain/audiocloud-domain-server/src/tests/: actix.rs  mod.rs
domain/audiocloud-driver/: Cargo.toml  Cross.toml  dev.yaml
domain/audiocloud-driver/src/: client.rs  driver.rs  drivers.rs  http_client.rs  lib.rs  messages.rs  nats.rs  supervisor.rs  utils.rs
domain/audiocloud-driver/src/distopik/: dual_1084.rs  mod.rs  summatra.rs
domain/audiocloud-driver/src/netio/: mod.rs  power_pdu_4c.rs  power_pdu_4c_mocked.rs  tests.rs
domain/audiocloud-driver/src/rest_api/: mod.rs  v1.rs
domain/audiocloud-reaper-plugin/: Cargo.toml  THANKS.md
domain/audiocloud-reaper-plugin/src/: audio_engine.rs  audiocloud_plugin.rs  events.rs  lib.rs  project.rs  streaming.rs
domain/audiocloud-reaper-plugin/src/audio_engine/: fixed_instance.rs  media_item.rs  media_track.rs  mixer.rs  project.rs  rest_api.rs
domain/audiocloud-reaper-plugin/templates/audio_engine/: auxrecv_connection.txt  hwout_return.txt  hwout_send.txt  media_item.txt  media_track.txt  mixer_track_input.txt  mixer_track_output.txt  project.txt  reainsert_return.txt  reainsert_send.txt
lib/audiocloud-http/: Cargo.toml
lib/audiocloud-http/src/: lib.rs
lib/audiocloud-tracing/: Cargo.toml
lib/audiocloud-tracing/src/: lib.rs  otlp.rs  sentry.rs
rust/ac/: Cargo.toml
rust/ac/src/: main.rs
rust/api/: Cargo.toml
rust/api-proto/: Cargo.toml  build.rs
rust/api-proto/src/: lib.rs
rust/api/src/: auth.rs  lib.rs  media.rs  rt.rs  user.rs  ws.rs
rust/api/src/driver/: mod.rs
rust/api/src/graph/: mod.rs
rust/api/src/instance/: control.rs  mod.rs  model.rs  request.rs  spec.rs  state.rs
rust/api/src/media/: mod.rs  spec.rs  state.rs
rust/api/src/task/: mod.rs  player.rs  spec.rs
rust/async-audio-engine/: Cargo.toml
rust/async-audio-engine/src/: input_node.rs  lib.rs
rust/audio-engine/: CMakeLists.txt  Cargo.toml  build.rs
rust/audio-engine/ffi/: juce.cpp
rust/audio-engine/src/: buffer.rs  bus_node.rs  connection.rs  events.rs  input_node.rs  juce.rs  juce_source_reader_node.rs  lib.rs  player.rs
rust/audio-engine/src/audio_device/: audio_device_insert_node.rs  juce_device.rs  mod.rs  simulator_device.rs
rust/audio-engine/src/player/: command.rs  device.rs  error.rs  init.rs  mod.rs  structure.rs  work_set.rs
rust/audio-engine/src/sinks/: mod.rs  monitor_sink_node.rs  streaming_sink_node.rs
rust/audio-engine/src/sources/: juce_source_reader_node.rs  mod.rs
rust/domain-db/: Cargo.toml
rust/domain-db/src/: instances.rs  lib.rs  media.rs  security.rs  tasks.rs  users.rs
rust/domain-server/: Cargo.toml
rust/domain-server-proto/: Cargo.toml
rust/domain-server-proto/src/: args.rs  context.rs  db_init.rs  error.rs  instance.rs  instance_driver.rs  main.rs  nats.rs  registry.rs  security.rs
rust/domain-server/assets/: index.html
rust/domain-server/src/: audio_device.rs  lib.rs  main.rs  media.rs  nats.rs  nats_utils.rs  request_tracker.rs  rest_api.rs  rt_socket.rs  rtc_socket.rs  service.rs  ws_socket.rs
rust/domain-server/src/audio_device/: juce_device.rs
rust/domain-server/src/instance/: mod.rs  server.rs  service.rs
rust/domain-server/src/instance_driver/: bin_page_utils.rs  mod.rs  run.rs  scripting.rs  serial.rs  server.rs  service.rs  usb_hid.rs
rust/domain-server/src/media/: download.rs  mod.rs  probe.rs  service.rs  upload.rs
rust/domain-server/src/rest_api/: auth.rs
rust/domain-server/src/service/: mod.rs  users.rs
rust/domain-server/src/tasks/: mod.rs  run.rs  server.rs
rust/r8brain-rs/: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
rust/r8brain-rs/.github/workflows/: test.yaml
rust/r8brain-rs/contrib/: dll_additional.cpp
rust/r8brain-rs/src/: lib.rs  tests.rs
specs/audiocloud-api/: Cargo.toml  README.md
specs/audiocloud-api/examples/: export_schemas.rs
specs/audiocloud-api/src/: lib.rs
specs/audiocloud-models/: Cargo.toml  README.md  build.rs
specs/audiocloud-models/examples/: export_schema.rs
specs/audiocloud-models/models/: audiocloud_insert_1x1.yaml  audiocloud_insert_24x2.yaml  audiocloud_insert_2x2.yaml  distopik_dual1084.yaml  distopik_summatra.yaml  netio_power_pdu_4c.yaml
specs/audiocloud-models/src/: elysia.rs  generated.rs  lib.rs
specs/audiocloud-models/templates/: rust_consts.rs  rust_generated.rs  rust_model_value.rs  rust_model_values.rs  rust_parameters.rs  rust_preset.rs  rust_reports.rs  ts_generated.ts  ts_parameters.ts  ts_preset.ts  ts_reports.ts
(+645 files in other folders)
