[package]
name = "audiocloud-rust-clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"

[dependencies.tokio]
version = "1"
features = ["macros"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "stream", "brotli", "gzip", "blocking", "rustls-tls"]

[dependencies.audiocloud-api]
path = "../../specs/audiocloud-api"