[package]
name = "audiocloud-domain-server"
version = "0.2.0"
edition = "2021"
authors = ["Bojan Šernek <bojan@distopik.com>"]

description = "Audiocloud Domain Server"

[dependencies]
dotenv = "0.15"
tracing = "0.1"
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
once_cell = "1"
futures = "0.3"
maplit = "1"
nats-aflowt = "0.16"
regex = "1"
bytes = "1"
itertools = "0.10"
tokio-util = "0.7"
stream_throttle = "0.4"
async-trait = "0.1"
derive_more = "0.99"
mime = "0.3"
nanoid = "0.4"
globwalk = "0.8"
tracing-log = "0.1.3"
tempfile = "3"

[dependencies.axum]
version = "0.6.0-rc.4"
features = ["ws"]

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.3"
default-features = false
features = ["migrations", "tracing", "sqlite"]

[dependencies.tonic]
version = "0.8"

[dependencies.opentelemetry]
version = "0.18"
features = ["rt-tokio"]

[dependencies.datachannel]
version = "0.8"
default_features = false
features = ["tracing", "vendored"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.tokio]
version = "1"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.dashmap]
version = "5"
features = ["rayon"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.reqwest]
version = "0.11"
features = ["json", "stream", "brotli", "gzip", "blocking", "rustls-tls"]

[dependencies.rdkafka]
optional = true
version = "0.29.0"
features = ["ssl-vendored", "cmake-build", "sasl", "tracing"]

[dependencies.sasl2-sys]
optional = true
version = "0.1"
features = ["scram", "plain"]

[dependencies.clap]
version = "4"
features = ["derive", "env", "help", "usage", "error-context"]

[dependencies.coerce]
git = "https://github.com/distopik/coerce-rs"

[dependencies.audiocloud-api]
path = "../../specs/audiocloud-api"

[dependencies.audiocloud-models]
path = "../../specs/audiocloud-models"

[dependencies.audiocloud-rust-clients]
path = "../../clients/audiocloud-rust-clients"

[dependencies.audiocloud-http]
path = "../../lib/audiocloud-http"

[dependencies.audiocloud-tracing]
path = "../../lib/audiocloud-tracing"

[dependencies.audiocloud-actors]
path = "../../lib/audiocloud-actors"

[features]
kafka = ["rdkafka", "sasl2-sys"]