[package]
name = "audiocloud-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
nats-aflowt = "0.16"
once_cell = "1"
dotenv = "0.15"
actix = "0.13"
actix-broker = "0.4"
serde_yaml = "0.9"
serde_repr = "0.1"
serde_json = "1"
maplit = "1"
anyhow = "1"
tracing = "0.1"
futures = "0.3"
tracing-subscriber = "0.3"
byteorder = "1"
hidapi = "1"
rand = "0.8"
actix-web = "4"

[dependencies.nix]
version = "0.25"
features = ["ioctl"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.clap]
version = "3"
features = ["derive", "env"]

[dependencies.openssl]
version = "0.10"
features = ["vendored"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.audiocloud-api]
path = "../../specs/audiocloud-api"

[dependencies.audiocloud-models]
path = "../../specs/audiocloud-models"

[dev-dependencies]
trim-margin = "0.1.0"

[target.armv7-unknown-linux-gnueabihf]
pre-build = ["dpkg --add-architecture armhf && apt-get update && apt-get install --assume-yes libssl-dev:armhf libusb-1.0-0-dev:armhf"]
