[package]
name = "audiocloud-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
nats-aflowt = "0.16"
once_cell = "1"
dotenv = "0.15"
serde_yaml = "0.9"
serde_repr = "0.1"
serde_json = "1"
maplit = "1"
anyhow = "1"
tracing = "0.1"
futures = "0.3"
byteorder = "1"
hidapi = "1"
rand = "0.8"
dashmap = "5"
async-trait = "0.1"
axum = "0.6.0-rc.4"
flume = "0.10"

[dependencies.nix]
version = "0.25"
features = ["ioctl"]

[dependencies.tokio]
version = "1"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.clap]
version = "4"
features = ["derive", "env"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.coerce]
git = "https://github.com/distopik/coerce-rs"

[dependencies.audiocloud-api]
path = "../../specs/audiocloud-api"

[dependencies.audiocloud-models]
path = "../../specs/audiocloud-models"

[dependencies.audiocloud-rust-clients]
path = "../../clients/audiocloud-rust-clients"

[dependencies.audiocloud-http]
path = "../../lib/audiocloud-http"

[dependencies.audiocloud-tracing]
path = "../../lib/audiocloud-tracing"

[dev-dependencies]
trim-margin = "0.1.0"