[package]
name = "audiocloud-reaper-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
vst = "0.3"
once_cell = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
nats = "0.23"
rmp-serde = "1"
anyhow = "1"
dasp = "0.11"
libflac-sys = "0.2"
flume = "0.10"
askama = "0.11"
maplit = "1"
serde_json = "1"
itertools = "0.10"
tempdir = "0.3"
cstr = "0.2"
lazy_static = "1"
actix-web = "4"
tracing-actix-web = "0.6"
derive_more = "0.99"
thiserror = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.bytes]
version = "1"
features = ["serde"]

[dependencies.uuid]
version = "1"
features = ["v4"]

[dependencies.r8brain-rs]
git = "https://github.com/audiocloud/r8brain-rs.git"
branch = "main"

[dependencies.reaper-macros]
git = "https://github.com/audiocloud/reaper-rs.git"
branch = "master"

[dependencies.reaper-low]
git = "https://github.com/audiocloud/reaper-rs.git"
branch = "master"

[dependencies.reaper-medium]
git = "https://github.com/audiocloud/reaper-rs.git"
branch = "master"

[dependencies.audiocloud-api]
path = "../../specs/audiocloud-api"

[lib]
name = "audiocloud_reaper_plugin"
crate-type = ["cdylib"]

