[package]
name = "audiocloud-http"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1"
rcgen = "0.10"

[dependencies.tower-http]
version = "0.3"
features = ["trace"]

[dependencies.clap]
version = "4"
features = ["derive", "env"]

[dependencies.axum-server]
version = "0.4"
features = ["tls-rustls"]

[dependencies.axum]
version = "0.6.0-rc.4"
features = ["http2"]

[dev-dependencies]
env_logger = "0.9"
reqwest = { version = "0.11", features = ["rustls"] }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

[dev-dependencies.test-log]
version = "0.2"
features = ["trace"]
