[package]
name = "audiocloud-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-loki = "0.2"
sentry-tracing = "0.27"
tracing-opentelemetry = "0.18"
opentelemetry-prometheus = "0.11"
prometheus = "0.13"
tokio = "1"
anyhow = "1"
reqwest = "0.11"
maplit = "1"
once_cell = "1"

[dependencies.clap]
version = "4"
features = ["derive", "env"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ['env-filter', 'json']

[dependencies.opentelemetry-otlp]
version = "0.11"
features = ["metrics", "http-proto", "reqwest-client"]

[dependencies.opentelemetry]
version = "0.18"
features = ["rt-tokio"]

[dependencies.sentry]
version = "0.27"
features = ["tracing"]