[package]
name = "ac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
argon2 = "0.5"
chrono = "0.4"
futures = "0.3"
password-hash = "0.5"
tracing = "0.1"
rpassword = "7"
rand = "0.8"
serde_json = "1"
serde_yaml = "0.9"

[dependencies.async-nats]
git = "https://github.com/nats-io/nats.rs"

[dependencies.clap]
version = "4"
features = ["color", "derive", "env"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.api]
path = "../api"

[dependencies.domain-service]
path = "../domain-service"