[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
derive_more = "0.99"
anyhow = "1"
cuid2 = "0.1"

[dependencies.bytes]
version = "1"
features = ["serde"]

[dependencies.schemars]
version = "0.8"
features = ["chrono", "bytes"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.schemars-zod]
version = "0.1"