[package]
name = "async-audio-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dasp_sample = "0.11"
flume = "0.10"
rtrb = "0.2"
derive_more = "0.99"
tinyvec = "1"
async-trait = "0.1"
futures = "0.3"
itertools = "0.10"

[dependencies.symphonia]
version = "0.5"
features = ["all-codecs", "all-formats"]

[dependencies.r8brain-rs]
git = "https://github.com/audiocloud/r8brain-rs"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.api]
path = "../api"

[dev-dependencies.criterion]
version = "0.4"
features = ["async_tokio", "html_reports"]


