[package]
name = "audio-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dasp_sample = "0.11"
flume = "0.10"
rtrb = "0.2"
derive_more = "0.99"
tinyvec = "1"
itertools = "0.10"
lru = "0.10"
rayon = "1"

[dependencies.symphonia]
version = "0.5"
features = ["all-codecs", "all-formats"]

[dependencies.r8brain-rs]
git = "https://github.com/audiocloud/r8brain-rs"

[dependencies.api]
path = "../api"

[dev-dependencies.criterion]
version = "0.4"
features = ["async_tokio", "html_reports"]
