[package]
name = "domain-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
async-stream = "0.3"
serde_json = "1"

[dependencies.surrealdb]
version = "1.0.0-beta.9"
features = ["kv-mem", "kv-rocksdb"]

[dependencies.api]
path = "../api"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "sync"]