[package]
name = "domain-server-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-connect = "0.1"
axum = "0.6"
anyhow = "1"
serde_json = "1"
serde_yaml = "0.9"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "time", "sync"]

[dependencies.api-proto]
path = "../api-proto"