[package]
name = "domain-server-proto"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-connect = "0.1"
anyhow = "1"
serde_json = "1"
serde_yaml = "0.9"
jwt = "0.16"
password-hash = "0.5"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
nanoid = "0.4"
tracing = "0.1"
futures = "0.3"
async-stream = "0.3"
async-nats = "0.29"
lazy_static = "1"
consulrs = "0.1"

[dependencies.clap]
version = "4"
features = ["env", "derive"]

[dependencies.tower-http]
version = "0.4"
features = ["cors", "fs", "trace"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.axum]
version = "0.6"
features = ["headers"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros", "time", "sync"]

[dependencies.api-proto]
path = "../api-proto"

[dependencies.domain-db]
path = "../domain-db"