[package]
name = "domain-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
futures = "0.3"
base64 = "0.21"
async-trait = "0.1"
backoff = "0.4"
async-stm = "0.2"
serde_json = "1"
serde_yaml = "0.9"
rmp-serde = "1"
async-nats = "0.29"
bytes = "1.4"
hidapi = "2"
serialport = "4"
byteorder = "1"
tracing = "0.1"
itertools = "0.10"
tokio-util = "0.7"
lazy_static = "1"
boa_engine = "0.16"
gc = "0.4"
regex = "1"

[dependencies.tower-http]
version = "0.4.0"
features = ["cors"]

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.tokio-stream]
version = "0.1"
features = ["sync"]

[dependencies.schemars]
version = "0.8"
features = ["chrono"]

[dependencies.axum]
version = "0.6"
features = ["json", "ws", "headers"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.api]
path = "../api"

[dependencies.async-audio-engine]
path = "../async-audio-engine"