[package]
name = "r8brain-rs"
version = "0.3.1"
edition = "2021"
authors = ["Bojan Šernek <bojan@distopik.com>", "Aleksey Vaneev"]
license-file = "LICENSE"

description = "r8brain audio resampler bindings for Rust. Sample rate converter designed by Aleksey Vaneev of Voxengo"

[dependencies]

[build-dependencies]
cmake = "0.1"