[package]
name = "audiocloud-api"
version = "0.1.0"
edition = "2021"
authors = ["Bojan Šernek <bojan@distopik.com>"]

[dependencies]
thiserror = "1"
derive_more = "0.99"
lazy_static = "1"
serde_bytes = "0.11"
serde_yaml = "0.9"
serde_json = "1"
serde_with = "2"
once_cell = "1"
rmp-serde = "1"
anyhow = "1"
regex = "1"
maplit = "1"
jatch = "0.1"

[dependencies.bytes]
version = "1"
features = ["serde"]

[dependencies.schemars]
version = "0.8"
features = ["uuid", "chrono", "bytes"]

[dependencies.uuid]
version = "1"
features = ["serde"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.serde]
version = "1"
features = ["derive", "rc"]
