[package]
name = "audiocloud-models"
version = "0.1.0"
edition = "2021"

[lib]
name = "audiocloud_models"

[dependencies]
schemars = "0.8"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.audiocloud-api]
path = "../audiocloud-api"

[build-dependencies.audiocloud-api]
path = "../audiocloud-api"

[dev-dependencies]
serde_yaml = "0.9"
serde_json = "1"

[dev-dependencies.utoipa]
version = "2"
features = ["chrono", "debug", "openapi_extensions", "uuid"]

[build-dependencies]
serde_yaml = "0.9"
globwalk = "0.8"
rm_rf = "0.6"
convert_case = "0.6"
askama = "0.11"
itertools = "0.10"